updated polybar and xrandr

--- a/linux/.config/polybar/config.ini
+++ b/linux/.config/polybar/config.ini
@@ -32,7 +32,6 @@ secondary = ${xrdb:color2:#00cd00}
 alert     = ${xrdb:color3:#cdcd00}
 
 [bar/base]
-monitor = ${env:MONITOR:HDMI1}
 background = ${colors.background}
 foreground = ${colors.foreground}
 width = 100%
@@ -40,33 +39,54 @@ height = 18
 offset-x = 0%
 offset-y = 0%
 module-margin = 2
-padding = 2
+padding = 3
 radius = 0.0
 fixed-center = false
 
 ; font-N = <fontconfig pattern>;<vertical offset><Paste>
 font-0 = Fira Mono:pixelsize=9;2
-font-1 = FontAwesome5Free:style=Solid:pixelsize=9;1
-font-2 = FontAwesome5Brands:style=Solid:pixelsize=9;1
-font-3 = Fira Mono:pixelsize=9:style=bold;2
-font-4 = Dejavu:pixelsize=13;3
+font-1 = Fira Mono:pixelsize=9:style=bold;2
+font-2 = Font Awesome 6 Free:style=Solid:pixelsize=9;1
+font-3 = Font Awesome 6 Free:style=Regular:pixelsize=9;1
+font-4 = Font Awesome 6 Brands:style=Regular:pixelsize=9;1
+font-5 = Dejavu:pixelsize=13;3
 
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
 
-[bar/top]
+[bar/primary-top]
+monitor = ${env:PRIMARY_MONITOR:HDMI1}
 inherit = bar/base
 padding-left = 0
 modules-left = i3 xwindow
 modules-right = rss timer taskwarrior updates-arch-combined xkeyboard backlight volume date
 
-[bar/bottom]
+[bar/primary-bottom]
+monitor = ${env:PRIMARY_MONITOR:HDMI1}
 inherit = bar/base
 bottom = true
 tray-position = right
 tray-margin-right = 5
 modules-left = cpu system-nvidia-smi memory filesystem
 modules-right = battery system-uptime-pretty wired-network wireless-network
+
+[bar/secondary-top]
+background = #00000000
+foreground = white
+monitor = ${env:SECONDARY_MONITOR:HDMI1}
+height = 24
+inherit = bar/base
+modules-left = timer
+modules-right = date
+
+#[bar/secondary-bottom]
+#monitor = ${env:SECONDARY_MONITOR:HDMI1}
+#inherit = bar/base
+#bottom = true
+#tray-position = right
+#tray-margin-right = 5
+#modules-left = cpu system-nvidia-smi memory filesystem
+#modules-right = battery system-uptime-pretty wired-network wireless-network
 
 [module/xwindow]
 type = internal/xwindow
@@ -87,7 +107,7 @@ label-mode-padding = ${self.padding}
 
 ; focused = Active workspace on focused monitor
 label-focused =  %{T4}%index%
-label-focused-font = 3
+label-focused-font = 1
 label-focused-background = ${colors.background-accent-2}
 label-focused-foreground = ${colors.foreground-accent-2}
 label-focused-padding = ${self.padding}
@@ -110,12 +130,11 @@ label-urgent-padding = ${self.padding}
 
 [module/date]
 type = internal/date
-interval = 60
+interval = 5
 date = %a
 date-alt = %Y-%m-%d
 time = %H:%M
 time-alt = %H:%M:%S
-format-prefix = " "
 label = %date% %time%
 
 [module/volume]
@@ -145,11 +164,11 @@ bar-volume-foreground-8 = ${colors.red3}
 bar-volume-foreground-9 = ${colors.red3}
 bar-volume-gradient = true
 bar-volume-indicator = ●
-bar-volume-indicator-font = 2
+bar-volume-indicator-font = 1
 bar-volume-fill = ─
-bar-volume-fill-font = 2
+bar-volume-fill-font = 1
 bar-volume-empty = ─
-bar-volume-empty-font = 2
+bar-volume-empty-font = 1
 bar-volume-empty-foreground = ${colors.fg1}
 
 [module/wired-network]
@@ -301,12 +320,12 @@ interval = 600
 
 [module/timer]
 type = custom/script
-exec = ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh tail 'TIMER' 5
+exec = ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh tail '' 5
 tail = true
-click-left = ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh new 25 'Pomo session' 'notify-send "Session finished"; canberra-gtk-play -i complete' ; ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh update %pid%
+click-left = ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh new 25 'Session' 'notify-send "Session finished"; canberra-gtk-play -i complete' ; ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh update %pid%
 click-middle = ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh cancel ; ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh update %pid%
-click-right = ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh new 5 'Pomo break' 'notify-send "Break finished"; canberra-gtk-play -i complete' ; ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh update %pid%
-scroll-up = ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh increase 60 || ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh new 1 'TIMER:' 'notify-send -u critical "Timer expired."; canberra-gtk-play -i complete' ; ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh update %pid%
+click-right = ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh new 5 'Break' 'notify-send "Break finished"; canberra-gtk-play -i complete' ; ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh update %pid%
+scroll-up = ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh increase 60 || ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh new 1 ':' 'notify-send -u critical "Timer expired."; canberra-gtk-play -i complete' ; ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh update %pid%
 scroll-down = ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh increase -60 ; ~/.config/polybar/scripts/polybar-timer/polybar-timer.sh update %pid%
 
 [module/taskwarrior]
