--- a/linux/.mutt/accounts/pablocb2303@gmail.com.rc
+++ b/linux/.mutt/accounts/pablocb2303@gmail.com.rc
@@ -4,10 +4,11 @@ set imap_user = "pablocb2303@gmail.com"
 set folder = "imaps://${imap_user}@imap.gmail.com/"
 set trash = "+[Gmail]/Corbeille"
 set postponed = "+[Gmail]/Brouillons"
+mailboxes -label ${imap_user}-INBOX +INBOX
 
 
 # SMPT
 set hostname = "gmail.com"
 
 
-source "~/.mutt/conf.d/google.muttrc"
+source "~/.mutt/conf.d/google.rc"
