--- a/linux/.mutt/accounts/pcardenasb@uni.edu.pe.rc
+++ b/linux/.mutt/accounts/pcardenasb@uni.edu.pe.rc
@@ -4,10 +4,11 @@ set imap_user = "pcardenasb@uni.edu.pe"
 set folder = "imaps://${imap_user}@imap.gmail.com/"
 set trash = "+[Gmail]/Trash"
 set postponed = "+[Gmail]/Drafts"
+mailboxes -label ${imap_user}-INBOX +INBOX
 
 
 # SMPT
 set hostname = "uni.edu.pe"
 
 
-source "~/.mutt/conf.d/google.muttrc"
+source "~/.mutt/conf.d/google.rc"
