--- a/linux/.config/polybar/config.ini
+++ b/linux/.config/polybar/config.ini
@@ -77,7 +77,7 @@ monitor = ${env:SECONDARY_MONITOR:HDMI1}
 height = 24
 inherit = bar/base
 modules-left = timer
-modules-right = date
+modules-right = taskwarrior date
 
 #[bar/secondary-bottom]
 #monitor = ${env:SECONDARY_MONITOR:HDMI1}
