--- a/home/.editorconfig
+++ b/home/.editorconfig
@@ -40,6 +40,6 @@ max_line_length = 79
 indent_style = space
 indent_size = 2
 
-[*.{json,yml}]
+[*.{json,yml,yaml,toml}]
 indent_style = space
 indent_size = 2
