XDG Base Directory!

--- a/linux/.config/polybar/config.ini
+++ b/linux/.config/polybar/config.ini
@@ -67,7 +67,7 @@ inherit = bar/base
 bottom = true
 tray-position = right
 tray-margin-right = 5
-modules-left = cpu system-nvidia-smi memory filesystem
+modules-left = cpu memory filesystem
 modules-right = battery system-uptime-pretty wired-network wireless-network
 
 [bar/secondary-top]
@@ -77,7 +77,8 @@ monitor = ${env:SECONDARY_MONITOR:HDMI1}
 height = 24
 inherit = bar/base
 modules-left = timer
-modules-right = taskwarrior date
+modules-right = date
+#modules-right = taskwarrior date
 
 #[bar/secondary-bottom]
 #monitor = ${env:SECONDARY_MONITOR:HDMI1}
@@ -85,7 +86,7 @@ modules-right = taskwarrior date
 #bottom = true
 #tray-position = right
 #tray-margin-right = 5
-#modules-left = cpu system-nvidia-smi memory filesystem
+#modules-left = cpu memory filesystem
 #modules-right = battery system-uptime-pretty wired-network wireless-network
 
 [module/xwindow]
@@ -347,7 +348,7 @@ interval = 3
 [module/rss]
 type = custom/script
 exec = ~/.config/polybar/scripts/newsboat.sh
-interval = 15
+interval = 30
 
 [settings]
 screenchange-reload = true
