--- a/linux/.config/mutt/folder-hooks/pcardenasb@uni.pe.rc
+++ b/linux/.config/mutt/folder-hooks/pcardenasb@uni.pe.rc
@@ -1,11 +1,14 @@
+set my_account = "pcardenasb@uni.pe"
+
 # IMAP
+set folder = "~/.local/share/mail/${my_account}"
 set spoolfile = "+Inbox"
 set trash = "+[Gmail]/Trash"
 set postponed = "+[Gmail]/Drafts"
 unset record
 
 # SMPT
-set from = "pcardenasb@uni.pe"
+set from = $my_account
 set hostname = "uni.pe"
 set smtp_url = "smtps://${from}@smtp.gmail.com"
 set smtp_authenticators = "oauthbearer:xoauth2"
