--- a/linux/.config/i3/config
+++ b/linux/.config/i3/config
@@ -38,10 +38,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start rofi (a program launcher)
-bindsym $mod+d exec --no-startup-id "rofi -show run"
-bindsym $mod+Shift+d exec --no-startup-id "rofi -show drun"
-bindsym $mod+n exec --no-startup-id "rofi -show window"
-bindsym $mod+p exec --no-startup-id "rofi -show window"
+bindsym $mod+d exec --no-startup-id "dmenu_run"
 
 # change focus
 bindsym $mod+j focus left
