--- a/linux/.config/mutt/folder-hooks/pablo.cardenas@imca.edu.pe.rc
+++ b/linux/.config/mutt/folder-hooks/pablo.cardenas@imca.edu.pe.rc
@@ -13,3 +13,5 @@ set hostname = "imca.edu.pe"
 set smtp_url = "smtps://${from}@smtp.gmail.com"
 set smtp_authenticators = "oauthbearer:xoauth2"
 set smtp_oauth_refresh_command = "~/.config/mutt/mutt_oauth2.py ~/.config/mutt/tokens/${from}.gpg"
+
+macro index G "!mbsync -c /home/pablo/.config/isync/mbsyncrc pablo.cardenas@imca.edu.pe^M" "Update pablo.cardenas@imca.edu.pe through mbsync"
