--- a/linux/.config/mutt/folder-hooks/pablocb2303@gmail.com.rc
+++ b/linux/.config/mutt/folder-hooks/pablocb2303@gmail.com.rc
@@ -13,3 +13,5 @@ set hostname = "gmail.com"
 set smtp_url = "smtps://${from}@smtp.gmail.com"
 set smtp_authenticators = "oauthbearer:xoauth2"
 set smtp_oauth_refresh_command = "~/.config/mutt/mutt_oauth2.py ~/.config/mutt/tokens/${from}.gpg"
+
+macro index G "!mbsync -c /home/pablo/.config/isync/mbsyncrc pablocb2303@gmail.com^M" "Update pablocb2303@gmail.com through mbsync"
