--- a/linux/.config/i3/config
+++ b/linux/.config/i3/config
@@ -38,6 +38,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 bindsym $mod+d exec --no-startup-id "dmenu_run"
+bindsym $mod+Shift+d exec --no-startup-id "passmenu"
 
 # change focus
 bindsym $mod+j focus left
