--- a/linux/.config/i3/config
+++ b/linux/.config/i3/config
@@ -39,6 +39,7 @@ bindsym $mod+Shift+q kill
 
 bindsym $mod+d exec --no-startup-id "dmenu_run"
 bindsym $mod+Shift+d exec --no-startup-id "passmenu"
+bindsym $mod+Shift+b exec --no-startup-id "bibopen"
 
 # change focus
 bindsym $mod+j focus left
