--- a/linux/.config/i3/config
+++ b/linux/.config/i3/config
@@ -40,6 +40,8 @@ bindsym $mod+Shift+q kill
 bindsym $mod+d exec --no-startup-id "dmenu_run"
 bindsym $mod+Shift+d exec --no-startup-id "passmenu"
 bindsym $mod+Shift+b exec --no-startup-id "bibopen"
+bindsym $mod+Shift+p exec --no-startup-id "xclip -o | festival --tts"
+bindsym $mod+Shift+o exec --no-startup-id "killall audsp"
 
 # change focus
 bindsym $mod+j focus left
