--- a/linux/.config/ranger/rifle.conf
+++ b/linux/.config/ranger/rifle.conf
@@ -64,6 +64,7 @@ ext pdf, has mupdf-x11,X, flag f = mupdf-x11 "$@"
 
 ext xopp, has xournalpp, X, flag f = xournalpp "$@"
 ext shp, has qgis, X, flag f = qgis "$@"
+ext dvi, has xdvi, X, flag f = xdvi "$@" -watchfile 1
 
 ext djvu, has zathura,X, flag f = zathura -- "$@"
 ext djvu, has evince, X, flag f = evince -- "$@"
