--- a/linux/.config/i3/config
+++ b/linux/.config/i3/config
@@ -38,8 +38,9 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 bindsym $mod+d exec --no-startup-id "dmenu_run"
+bindsym $mod+b exec --no-startup-id "bibopen"
+bindsym $mod+Shift+b exec --no-startup-id "biburl"
 bindsym $mod+Shift+d exec --no-startup-id "passmenu"
-bindsym $mod+Shift+b exec --no-startup-id "bibopen"
 bindsym $mod+Shift+p exec --no-startup-id "xclip -o | festival --tts"
 bindsym $mod+Shift+o exec --no-startup-id "killall audsp"
 
