--- a/linux/.config/i3/config
+++ b/linux/.config/i3/config
@@ -207,4 +207,5 @@ bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 
 # i3-gaps
-gaps inner 8
+gaps outer 8
+gaps inner 16
