--- a/linux/.config/fontconfig/fonts.conf
+++ b/linux/.config/fontconfig/fonts.conf
@@ -1,12 +1,19 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-    <match target="font">
-        <edit mode="assign" name="hinting"><bool>true</bool></edit>
-        <edit mode="assign" name="autohint"><bool>false</bool></edit>
-        <edit mode="assign" name="hintstyle"><const>hintfull</const></edit>
-        <edit mode="assign" name="rgba"><const>rgb</const></edit>
-        <edit mode="assign" name="antialias"><bool>true</bool></edit>
-        <edit mode="assign" name="lcdfilter"><const>lcddefault</const></edit>
-    </match>
+  <match target="font">
+    <edit mode="assign" name="hinting"><bool>true</bool></edit>
+    <edit mode="assign" name="autohint"><bool>false</bool></edit>
+    <edit mode="assign" name="hintstyle"><const>hintfull</const></edit>
+    <edit mode="assign" name="rgba"><const>rgb</const></edit>
+    <edit mode="assign" name="antialias"><bool>true</bool></edit>
+    <edit mode="assign" name="lcdfilter"><const>lcddefault</const></edit>
+  </match>
+  <alias>
+    <family>monospace</family>
+    <prefer>
+      <family>Source Code Pro</family>
+      <family>Fira Mono</family>
+    </prefer>
+  </alias>
 </fontconfig>
