--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -16,6 +16,7 @@ shadow-opacity = 0.8
 shadow-exclude = [
   "! name~=''",
   "class_g = 'Osdlyrics'",
+  "class_g = 'scrot'",
   "class_g = 'i3-frame'",
   "class_g = 'zoom' && name = 'as_toolbar'",
   "bounding_shaped && !rounded_corners",
