Added to .gitignore

--- a/.config/.gitignore
+++ b/.config/.gitignore
@@ -9,3 +9,18 @@ pulse/cookie
 google-chrome/
 Google/
 zoomus.conf
+
+GIMP/
+Kingsoft/
+Unknown Organization/
+discord/
+gtk-2.0/
+inkscape/
+libfm/
+mpv/
+obs-studio/
+pympress
+qutebrowser/autoconfig.yml
+vdirsyncer/
+vimgolf/
+xournalpp/
