--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,26 @@
+/.Xauthority
+/.audacity-data/
+/.cabal/
 /.cache/
 /.dotfiles/
+/.ghc/
 /.gnupg/
+/.googleearth/
+/.ipython/
+/.jupyter/
 /.local/share/*
 !/.local/share/applications
 /.local/state/
+/.mozilla/
+/.nv/
+/.pki/
 /.ssh/
+/.texlive2022/
 /.vim/
 /.viminfo
+/.zoom/
+/R/
 /dl/
 /dox/
 /pix/
 /vids/
-/R/
