--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 /.jupyter/
 /.local/share/*
 !/.local/share/applications
+!/.local/share/qutebrowser
+/.local/share/qutebrowser/*
+!/.local/share/qutebrowser/userscripts
 /.local/state/
 /.mozilla/
 /.nv/
