Update configuration in termux

--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -1,2 +1,5 @@
+fullscreen = true
 terminal-cursor-blink-rate = 1000
 allow-external-apps = true
+terminal-margin-vertical = 10
+terminal-margin-horizontal = 10
