Better blur with picom

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,7 +1,8 @@
 backend = "glx";
-glx-copy-from-front = false;
-xrender-sync-fence = true;
-vsync = true;
+#glx-copy-from-front = true;
+#xrender-sync-fence = true;
+#vsync = true;
+#window-shader-fg = "/home/pablo/.config/picom/file.glsl"
 
 
 shadow = true;
@@ -25,28 +26,28 @@ shadow-exclude = [
 ];
 
 
-fading = true;
-fade-in-step = 0.03;
-fade-out-step = 0.03;
-fade-delta = 0.01;
+#fading = false;
+#fade-in-step = 3;
+#fade-out-step = 3;
+#fade-delta = 1;
 
 
-frame-opacity = 0.8;
-inactive-opacity-override = false;
-opacity-rule = [
-  "90:class_g = 'URxvt' && !focused",
-  "60:class_g ~= '' && name ~= 'screenkey'",
-  "60:class_g ~= '' && name ~= 'screenkey'",
-  "95:class_g = 'Zathura' && !focused",
-  "80:class_g *?= 'Rofi'",
-];
-inactive-dim = 0.02;
+#frame-opacity = 0.8;
+#inactive-opacity-override = false;
+#opacity-rule = [
+#  "90:class_g = 'URxvt' && !focused",
+#  "60:class_g ~= '' && name ~= 'screenkey'",
+#  "60:class_g ~= '' && name ~= 'screenkey'",
+#  "95:class_g = 'Zathura' && !focused",
+#  "80:class_g *?= 'Rofi'",
+#];
+inactive-dim = 0.05;
 
 
 blur: {
 	method = "gaussian";
-	size = 15;
-	deviation = 5.0;
+	size = 50;
+	deviation = 14;
 }
 
 blur-background-exclude = [
