--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,7 +1,7 @@
 backend = "glx";
 #glx-copy-from-front = true;
 #xrender-sync-fence = true;
-#vsync = true;
+vsync = true;
 #window-shader-fg = "/home/pablo/.config/picom/file.glsl"
 
 
@@ -46,8 +46,8 @@ inactive-dim = 0.05;
 
 blur: {
 	method = "gaussian";
-	size = 50;
-	deviation = 14;
+	size = 25;
+	deviation = 7;
 }
 
 blur-background-exclude = [
@@ -59,9 +59,11 @@ blur-background-exclude = [
 
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.9; focus = true; full-shadow = false; };
-  dock = { shadow = false; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 0.9; }
-  dropdown_menu = { opacity = 0.9; }
+  tooltip = { opacity = 0.2; };
+  dock = { opacity = 0.2; shadow = false; }
+  dnd = { opacity = 0.2; shadow = false; }
+  popup_menu = { opacity = 0.9; shadow = false; blur-background = false; }
+  #dropdown_menu = { opacity = 0.9; shadow = false; blur-background = false; }
+  utility       = { opacity = 0.9; shadow = false; blur-background = false; };
+  menu = { opacity = 0.2; blur-background=false; };
 };
