--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -45,9 +45,9 @@ inactive-dim = 0.05;
 
 
 blur: {
-	method = "gaussian";
-	size = 25;
-	deviation = 7;
+  method = "gaussian";
+  size = 25;
+  deviation = 7;
 }
 
 blur-background-exclude = [
@@ -59,11 +59,11 @@ blur-background-exclude = [
 
 wintypes:
 {
-  tooltip = { opacity = 0.2; };
-  dock = { opacity = 0.2; shadow = false; }
-  dnd = { opacity = 0.2; shadow = false; }
-  popup_menu = { opacity = 0.9; shadow = false; blur-background = false; }
-  #dropdown_menu = { opacity = 0.9; shadow = false; blur-background = false; }
+  tooltip       = { opacity = 0.2; };
+  dock          = { opacity = 0.2; shadow = false; }
+  dnd           = { opacity = 1; shadow = false; blur-background = false; }
+  popup_menu    = { opacity = 0.9; shadow = false; blur-background = false; }
+  dropdown_menu = { opacity = 0.2; shadow = false; blur-background = false; }
   utility       = { opacity = 0.9; shadow = false; blur-background = false; };
-  menu = { opacity = 0.2; blur-background=false; };
+  menu          = { opacity = 0.2; blur-background=false; };
 };
