--- a/.config/.gitignore
+++ b/.config/.gitignore
@@ -1,31 +1,80 @@
-Kingsoft/Office.conf
-Kingsoft/Office.conf.lock
-Kingsoft/WPSCloud.conf
-QtProject.conf
-RStudio/desktop.ini
-chromium/
-dconf/user
-pulse/cookie
-google-chrome/
-Google/
-zoomus.conf
+/GIMP/
+/Google/
+/Kingsoft/
+/Kingsoft/Office.conf
+/Kingsoft/Office.conf.lock
+/Kingsoft/WPSCloud.conf
+/Microsoft/
+/QtProject.conf
+/RStudio/desktop.ini
+/Unknown Organization/
+/calibre/
+/chromium/
+/dconf/user
+/discord/
+/google-chrome/
+/gtk-2.0/
+/gtkrc
+/gtkrc-2.0
+/inkscape/
+/libfm/
+/libreoffice/
+/obs-studio/
+/pcmanfm/
+/pulse/
+/pulse/cookie
+/pympress
+/qutebrowser/autoconfig.yml
+/sqlitebrowser/
+/transmission/
+/vdirsyncer/
+/vimgolf/
+/xournalpp/
+/zoom.conf
+/zoomus.conf
 
-GIMP/
-Kingsoft/
-Unknown Organization/
-discord/
-gtk-2.0/
-inkscape/
-libfm/
-mpv/
-obs-studio/
-pympress
-qutebrowser/autoconfig.yml
-vdirsyncer/
-vimgolf/
-xournalpp/
-libreoffice/
-Microsoft/
-calibre/
-pcmanfm/
-sqlitebrowser/
+
+# KDE
+/KDE/
+/Trolltech.conf
+/akregatorrc
+/baloofilerc
+/bluedevilglobalrc
+/dolphinrc
+/gwenviewrc
+/kactivitymanagerdrc
+/kateschemarc
+/kcminputrc
+/kconf_updaterc
+/kde.org/
+/kded5rc
+/kdedefaults/
+/kdeglobals
+/kglobalshortcutsrc
+/khotkeysrc
+/kmixrc
+/konsolerc
+/konsolesshconfig
+/krunnerrc
+/kscreenlockerrc
+/ksmserverrc
+/ktimezonedrc
+/kwinrc
+/kwinrulesrc
+/kxkbrc
+/okularpartrc
+/pavucontrol.ini
+/plasma-localerc
+/plasma-org.kde.plasma.desktop-appletsrc
+/plasmanotifyrc
+/plasmashellrc
+/powermanagementprofilesrc
+/session/
+/spectaclerc
+/systemsettingsrc
+/touchpadxlibinputrc
+/trashrc
+/baloofileinformationrc
+/cef_user_data/
+/discoverrc
+/libaccounts-glib/
