--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,32 +1,8 @@
-set_from_resource $black    color0  #000000
-set_from_resource $red3     color1  #cd0000
-set_from_resource $green3   color2  #00cd00
-set_from_resource $yellow3  color3  #cdcd00
-set_from_resource $blue3    color4  #0000cd
-set_from_resource $magenta3 color5  #cd00cd
-set_from_resource $cyan3    color6  #00cdcd
-set_from_resource $gray90   color7  #e5e5e5
-set_from_resource $gray30   color8  #4d4d4d
-set_from_resource $red      color9  #ff0000
-set_from_resource $green    color10 #00ff00
-set_from_resource $yellow   color11 #ffff00
-set_from_resource $blue     color12 #0000ff
-set_from_resource $magenta  color13 #ff00ff
-set_from_resource $cyan     color14 #00ffff
-set_from_resource $white    color15 #ffffff
-set_from_resource $fg0 foreground #000000
-set_from_resource $fg1 i3wm.fg1 #4d4d4d
-set_from_resource $bg0 background #ffffff
-set_from_resource $bg1 i3wm.bg1 #e5e5e5
-
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:Fira Mono 8
-
-# Start polybar
-#exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -38,11 +14,6 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 bindsym $mod+d exec --no-startup-id "dmenu_run"
-bindsym $mod+b exec --no-startup-id "bibopen"
-bindsym $mod+Shift+b exec --no-startup-id "biburl"
-bindsym $mod+Shift+d exec --no-startup-id "passmenu"
-bindsym $mod+Shift+p exec --no-startup-id "xclip -o | festival --tts"
-bindsym $mod+Shift+o exec --no-startup-id "killall audsp"
 
 # change focus
 bindsym $mod+j focus left
@@ -144,30 +115,16 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# class                 border  backgr. text    indicator child_border
-client.focused          $fg0    $bg0    $fg0    $green    $fg0
-client.focused_inactive $bg1    $bg0    $fg0    $green    $bg1
-client.unfocused        $bg1    $bg0    $fg1    $green    $bg1
-client.urgent           $red    $bg0    $red    $green    $red
-client.placeholder      $magenta $magenta   $magenta   $magenta  $magenta
-client.background       $magenta
+## class                border  backgr. text    indicator child_border
+client.focused          #EEEEEE #FF0000 #00FFFF #00FF00 #CCCCCC
+client.focused_inactive #FF0000 #FF0000 #00FFFF #00FF00 #000000
+client.unfocused        #FF0000 #FF0000 #00FFFF #00FF00 #000000
+client.urgent           #FF0000 #FF0000 #00FFFF #00FF00 #FF0000
+client.placeholder      #FF00FF #FF00FF #FF00FF #FF00FF #FF00FF
+client.background       #FF00FF
 
-# Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
 
-# Screen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 5 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 5 # decrease screen brightness
-
-# Media player controls
-bindsym XF86AudioPlay exec playerctl play-pause
-bindsym XF86AudioStop exec playerctl stop
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
-
-default_border pixel 1
+default_border pixel 2
 
 # You can also use any non-zero value if you'd like to have a border
 #for_window [class=".*"] border pixel 0
@@ -187,16 +144,8 @@ for_window [class="zoom" instance="zoom" title="Settings"] floating enable
 for_window [class="zoom" instance="zoom" title="Settings"] move position center
 
 
-# 4.19. Automatically putting workspaces on specific screens
-workspace 1 output VGA1
-workspace 2 output HDMI-0
-workspace 3 output VGA1
-workspace 4 output HDMI-0
-workspace 5 output VGA1
-workspace 6 output HDMI-0
-workspace 7 output VGA1
-workspace 8 output HDMI-0
-
+# 4.24 Focus follows mouse
+focus_follows_mouse no
 
 # 6.20. Scratchpad
 
@@ -207,5 +156,5 @@ bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 
 # i3-gaps
-gaps outer 8
-gaps inner 16
+#gaps outer 8
+gaps inner 12
