--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,1 @@
-set -g default-terminal tmux-256color  # Use 256 colors
-set -g history-limit 100000            # Scrollback buffer number of lines
-set -s escape-time 0
+set -g history-limit 100000
