--- a/.config/newsboat/config
+++ b/.config/newsboat/config
@@ -3,4 +3,4 @@ miniflux-url "http://miniflux.pcardenasb.com"
 miniflux-login "pablo"
 miniflux-passwordeval "pass miniflux/pablo"
 
-macro v set browser "setsid -f mpv </dev/null >/dev/null 2>&1" ; open-in-browser ; set browser
+macro v set browser "setsid -f mpv --audio-device=alsa/pulse --ytdl-raw-options=sub-langs=\"[en.*,es.*,fr.*,pt.*]\",write-sub=,write-auto-sub= </dev/null >/dev/null 2>&1" ; open-in-browser ; set browser "$BROWSER"
