--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -4,6 +4,7 @@
   <alias>
     <family>monospace</family>
     <prefer>
+      <family>Liberation Mono</family>
       <family>DejaVu Sans Mono</family>
       <family>Source Code Pro</family>
       <family>Fira Mono</family>
