elinks: added style to tmux-256color terminal

--- a/.config/elinks/elinks.conf
+++ b/.config/elinks/elinks.conf
@@ -1,4 +1,9 @@
-set document.css.enable = 1
-set document.css.ignore_display_none = 0
-set terminal.tmux-256color.colors = 0
-set terminal.rxvt-unicode-256color.colors = 0
+#set document.css.enable = 1
+#set document.css.ignore_display_none = 1
+set terminal.tmux-256color.colors = 1
+set terminal.tmux-256color.underline = 1
+set terminal.tmux-256color.strike = 1
+set terminal.tmux-256color.italic = 1
+set terminal.tmux-256color.block_cursor = 1
+set terminal.tmux-256color.utf_8_io = 1
+#set terminal.tmux-256color.transparency = 1
