Ignored kcachegrind and gcloud

--- a/.config/.gitignore
+++ b/.config/.gitignore
@@ -16,11 +16,13 @@
 /dconf/user
 /discord/
 /fontforge/
+/gcloud/
 /google-chrome/
 /gtk-2.0/
 /gtkrc
 /gtkrc-2.0
 /inkscape/
+/kcachegrindrc
 /libfm/
 /libreoffice/
 /linode-cli
