--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,2 +1,18 @@
 set -g history-limit 100000
 set -g status-right ""
+
+unbind 0
+unbind 1
+unbind 2
+unbind 3
+unbind 4
+unbind 5
+unbind 6
+unbind 7
+unbind 8
+unbind 9
+
+unbind p
+unbind n
+
+unbind o
