fontconfig: `monospace` defaults to `Comic Mono`

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,9 +1,19 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
+  <match target="pattern">
+    <test qual="any" name="family" compare="eq">
+      <string>monospace</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Comic Mono</string>
+    </edit>
+  </match>
   <alias>
     <family>monospace</family>
     <prefer>
+      <family>Comic Mono</family>
+      <family>OpenDyslexicMono</family>
       <family>Liberation Mono</family>
       <family>DejaVu Sans Mono</family>
       <family>Source Code Pro</family>
