--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -2,16 +2,51 @@
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
   <match target="pattern">
-    <test qual="any" name="family" compare="eq">
+    <test qual="all" name="family" compare="eq">
       <string>monospace</string>
+    </test>
+    <test qual="all" name="weight" compare="not_eq">
+      <const>Bold</const>
     </test>
     <edit name="family" mode="assign" binding="same">
       <string>Comic Mono</string>
+    </edit>
+    <edit name="style" mode="assign" binding="same">
+      <string>Normal</string>
+    </edit>
+    <edit name="family" mode="append" binding="same">
+      <string>DejaVu Sans Condensed</string>
+    </edit>
+    <edit name="family" mode="append" binding="same">
+      <string>Consolas</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test qual="all" name="family" compare="eq">
+      <string>monospace</string>
+    </test>
+    <test qual="all" name="style" compare="eq">
+      <string>Bold</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Comic Mono</string>
+    </edit>
+    <edit name="style" mode="assign" binding="same">
+      <string>Bold</string>
+    </edit>
+    <edit name="family" mode="append" binding="same">
+      <string>DejaVu Sans Condensed</string>
+    </edit>
+    <edit name="family" mode="append" binding="same">
+      <string>Consolas</string>
     </edit>
   </match>
   <alias>
     <family>monospace</family>
     <prefer>
+      <family>Comic Mono</family>
+      <family>Consolas</family>
+      <family>OpenDyslexic3</family>
       <family>Comic Mono</family>
       <family>OpenDyslexicMono</family>
       <family>Liberation Mono</family>
