--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,8 @@
-set -g history-limit 100000
+set -g history-limit 10000
 set -g status-right ""
+set -g window-status-format '#W#{?window_flags,#{window_flags}, }'
+set -g window-status-current-format '#W#{?window_flags,#{window_flags}, }'
+
 
 unbind 0
 unbind 1
