mintty: changed font-family and font-size

--- a/.config/mintty/config
+++ b/.config/mintty/config
@@ -3,6 +3,7 @@ CursorType=block
 Columns=80
 Rows=25
 Scrollbar=none
-Font=Consolas
+Font=Cascadia Mono
 BoldAsFont=yes
 BoldAsColour=yes
+FontHeight=14
