tmux: don't use abbreviations in config files

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,21 +1,22 @@
-set -g history-limit 10000
-set -g status-right ""
-set -g window-status-format '#W#{?window_flags,#{window_flags}, }'
-set -g window-status-current-format '#W#{?window_flags,#{window_flags}, }'
+set-option -g history-limit 10000
+set-option -g status-right ""
 
+bind-key -T prefix S choose-tree -ZGs
 
-unbind 0
-unbind 1
-unbind 2
-unbind 3
-unbind 4
-unbind 5
-unbind 6
-unbind 7
-unbind 8
-unbind 9
+set-option -g window-status-format '#W#{?window_flags,#{window_flags}, }'
+set-option -g window-status-current-format '#W#{?window_flags,#{window_flags}, }'
+unbind-key 0
+unbind-key 1
+unbind-key 2
+unbind-key 3
+unbind-key 4
+unbind-key 5
+unbind-key 6
+unbind-key 7
+unbind-key 8
+unbind-key 9
 
-unbind p
-unbind n
+unbind-key p
+unbind-key n
 
-unbind o
+unbind-key o
